--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DeThiTracNghiem
 excludes=
+file.reference.jcalendar-1.4.jar=D:\\Users\\SIU\\jcalendar-1.4.jar
 file.reference.sqljdbc42.jar=D:\\Users\\SIU\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
